--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,7 @@ on:
 
 jobs:
   test:
+    name: test
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
@@ -36,6 +37,7 @@ jobs:
         shell: bash
 
   test-windows:
+    name: test-windows
     runs-on: windows-latest
     steps:
       - uses: actions/checkout@v3
@@ -60,3 +62,20 @@ jobs:
           toolchain: stable
           components: clippy
       - run: cargo clippy --all-features
+
+  # Summary job for branch protection rules
+  ci-success:
+    name: ci-success
+    runs-on: ubuntu-latest
+    needs: [test, test-windows, clippy_check]
+    if: always()
+    steps:
+      - name: Check all jobs succeeded
+        run: |
+          if [ "${{ needs.test.result }}" != "success" ] || 
+             [ "${{ needs.test-windows.result }}" != "success" ] || 
+             [ "${{ needs.clippy_check.result }}" != "success" ]; then
+            echo "Some CI jobs failed"
+            exit 1
+          fi
+          echo "All CI jobs passed successfully!"
