--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,3 +60,17 @@ jobs:
           toolchain: stable
           components: clippy
       - run: cargo clippy --all-features
+
+  ci-success:
+    name: CI Success
+    runs-on: ubuntu-latest
+    needs: [test, clippy_check]
+    if: always()
+    steps:
+      - name: Check required jobs
+        run: |
+          if [[ "${{ needs.test.result }}" != "success" || "${{ needs.clippy_check.result }}" != "success" ]]; then
+            echo "Required Linux tests failed"
+            exit 1
+          fi
+          echo "All required tests passed"
