Add ci-success job to exclude Windows tests from auto-merge requirements

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,21 +61,18 @@ jobs:
         with:
           toolchain: stable
           components: clippy
-      - run: cargo clippy --all-features
+        - run: cargo clippy --all-features
 
-  # Summary job for branch protection rules
   ci-success:
-    name: ci-success
+    name: CI Success
     runs-on: ubuntu-latest
-    needs: [test, test-windows, clippy_check]
+    needs: [test, clippy_check]
     if: always()
     steps:
-      - name: Check all jobs succeeded
+      - name: Check required jobs
         run: |
-          if [ "${{ needs.test.result }}" != "success" ] || 
-             [ "${{ needs.test-windows.result }}" != "success" ] || 
-             [ "${{ needs.clippy_check.result }}" != "success" ]; then
-            echo "Some CI jobs failed"
+          if [[ "${{ needs.test.result }}" != "success" || "${{ needs.clippy_check.result }}" != "success" ]]; then
+            echo "Required Linux tests failed"
             exit 1
           fi
-          echo "All CI jobs passed successfully!"
+          echo "All required tests passed"
